--- a/common/.flake/home/programs/fastfetch.nix.org
+++ b/common/.flake/home/programs/fastfetch.nix.org
@@ -1,22 +1,48 @@
 #+title: Fastfetch Configuration
 
 Specify the layout for =fastfetch=.
-#+begin_src nix :tangle ~/.flake/home/programs/fastfetch.nix :mkdirp yes
+#+begin_src nix
   { config, pkgs, ... }:
 
   {
     programs.fastfetch = {
       enable = true;
       settings = {
-        logo = {
-            type = "raw";
-            source = "~/.config/fastfetch/logo.sixel";
-            width = 40;
-            height = 19;
-        };
-        display = {
-          separator = "  ";
-        };
+#+end_src
+
+Use a =sixel=-encoded logo at =~/.config/fastfetch/logo.sixel=.
+#+begin_src nix
+  logo = {
+      type = "raw";
+      source = "~/.config/fastfetch/logo.sixel";
+      width = 40;
+      height = 19;
+  };
+#+end_src
+
+Use two spaces as a separator.
+#+begin_src nix
+  display = {
+    separator = "  ";
+  };
+#+end_src
+
+List out
+- Operating system
+- The kernel
+- Uptime
+- The number of packages
+- Shell
+- Display information
+- Window manager
+- Terminal
+- CPU information
+- GPU information
+- Memory information
+- Disk usage
+- Locale
+- Colours
+#+begin_src nix
         modules = [
           "title"
           {
