--- a/common/.flake/home/programs/neovim.nix.org
+++ b/common/.flake/home/programs/neovim.nix.org
@@ -1,6 +1,6 @@
 #+title: Neovim Settings
 
-Create a simple Neovim configuration.
+Create a simple Neovim configuration. Install some basic packages and use a light colour scheme.
 #+begin_src nix
   { config, pkgs, ... }:
 
