--- a/common/.flake/home/clang-format.nix.org
+++ b/common/.flake/home/clang-format.nix.org
@@ -1,5 +1,11 @@
 #+title: Clang Format Default Options
 
+Set global =clang-format= options:
+- Default to LLVM style
+- Use indents of width 4
+- Use Linux standards for braces (new line for functions, same line for everything else)
+- If statements cannot be on a single line.
+- Case labels are not indented.
 #+begin_src nix :tangle ~/.flake/home/clang-format.nix :mkdirp yes
   { config, pkgs, ... }:
 
