--- a/common/.flake/home/fonts.nix.org
+++ b/common/.flake/home/fonts.nix.org
@@ -1,6 +1,8 @@
 #+title: Font Configuration
 
-Install fonts necessary for my configuration.
+Install fonts necessary for my configuration. Namely
+- Computer Modern
+- Source Code Pro (Nerd Font)
 #+begin_src nix :tangle ~/.flake/home/fonts.nix :mkdirp yes
 { config, pkgs, ... }:
 
