--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -78,11 +78,14 @@ List packages to install with Homebrew.
     "mpv"
     "ninja"
     "nmap"
+    "nspr"
+    "nss"
     "open-mpi"
     "open-ocd"
     "openjdk"
     "pandoc"
     "pinentry-mac"
+    "poppler"
     "ripgrep"
     "rsync"
     "rust"
