--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -253,6 +253,23 @@ Run the early setup right away.
     (use-package magit))
 #+end_src
 
+=jj/setup-pdf-tools= installs a better PDF viewer than =DocView=.
+#+begin_src emacs-lisp
+  (defun jj/setup-pdf-tools ()
+    "install pdf-tools"
+    (use-package pdf-tools
+      :config
+      (pdf-tools-install)
+      :hook
+      (pdf-view-mode . (lambda () (display-line-numbers-mode -1)))
+      :init
+      (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
+      :config
+      (setq TeX-view-program-selection '((output-pdf "PDF Tools"))
+            TeX-view-program-list '(("PDF Tools" Tex-pdf-tools-sync-view))
+            TeX-source-correlate-start-server t)))
+#+end_src
+
 =jj/setup-fzf= installs and configures =fzf= to be used as a fuzzy finder.
 #+begin_src emacs-lisp
   (defun jj/setup-fzf ()
@@ -379,6 +396,7 @@ Run the early setup right away.
     (jj/setup-dumb-jump)
     (jj/setup-magit)
     (jj/setup-fzf)
+    (jj/setup-pdf-tools)
     (jj/setup-vterm)
     (jj/setup-completions)
     (jj/setup-checkers)
