--- a/common/.flake/home/programs/zsh.nix.org
+++ b/common/.flake/home/programs/zsh.nix.org
@@ -54,6 +54,14 @@ Load extra code.
   initExtra = ''
 #+end_src
 
+Configure Homebrew =llvm=.
+#+begin_src sh
+  export CC='/opt/homebrew/opt/llvm/bin/clang'
+  export CXX="$CC++"
+  export LDFLAGS="$LDFLAGS -L/opt/homebrew/opt/llvm/lib"
+  export CPPFLAGS="$CPPFLAGS -I/opt/homebrew/opt/llvm/include"
+#+end_src
+
 Create potential aliases and create the prompt.
 #+begin_src sh
   which lesspipe.sh &> /dev/null && export LESSOPEN="|lesspipe.sh %s"
