--- a/common/.flake/home/programs/zsh.nix.org
+++ b/common/.flake/home/programs/zsh.nix.org
@@ -59,8 +59,8 @@ Configure Homebrew =llvm=.
   export PATH="/opt/homebrew/opt/llvm/bin:$PATH"
   export CC='/opt/homebrew/opt/llvm/bin/clang'
   export CXX="$CC++"
-  export LDFLAGS="$LDFLAGS -L/opt/homebrew/opt/llvm/lib"
-  export CPPFLAGS="$CPPFLAGS -I/opt/homebrew/opt/llvm/include"
+  export LDFLAGS="$LDFLAGS -L/opt/homebrew/opt/llvm/lib -L/opt/homebrew/lib"
+  export CPPFLAGS="$CPPFLAGS -I/opt/homebrew/opt/llvm/include -I/opt/homebrew/include"
 #+end_src
 
 Create potential aliases and create the prompt.
