--- a/common/.flake/home/programs/git.nix.org
+++ b/common/.flake/home/programs/git.nix.org
@@ -1,7 +1,7 @@
 #+title: Git Configuration
 
 Specify my name and email for =git=. Also enable =delta= and =pull.rebase=.
-#+begin_src nix :tangle ~/.flake/home/programs/git.nix :mkdirp yes
+#+begin_src nix
 { config, pkgs, ... }:
 
 {
