--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -115,6 +115,7 @@ List casks to install with Homebrew.
     "calibre"
     "desmume"
     "gcc-arm-embedded"
+    "ghostty"
     "gimp"
     "godot"
     "inkscape"
@@ -124,7 +125,7 @@ List casks to install with Homebrew.
     "obs"
     "openemu"
     "pokemon-showdown"
-    "protonmail-bridge"
+    "proton-mail-bridge"
     "protonvpn"
     "qbittorrent"
     "rar"
