--- a/macos.local/.flake/home/programs/ghostty.nix.org
+++ b/macos.local/.flake/home/programs/ghostty.nix.org
@@ -8,6 +8,7 @@ This terminal emulator seems over-hyped, but I'm trying it anyways.
     home.file."./.config/ghostty/config".text = ''
     font-family = "SauceCodePro Nerd Font"
     font-thicken = true
+    theme = "Unikitty"
     '';
   }
 #+end_src
