--- a/macos.local/.flake/home/programs/ghostty.nix.org
+++ b/macos.local/.flake/home/programs/ghostty.nix.org
@@ -10,8 +10,8 @@ This terminal emulator seems over-hyped, but I'm trying it anyways.
     font-thicken = true
     theme = "Unikitty"
     window-decoration = false
-    option-as-alt = true
-    quit-after-last-window-closed = true;
+    macos-option-as-alt = true
+    quit-after-last-window-closed = true
     macos-window-shadow = false
     macos-icon = "custom-style"
     macos-icon-frame = "beige"
