--- a/macos.local/.flake/home/programs/ghostty.nix.org
+++ b/macos.local/.flake/home/programs/ghostty.nix.org
@@ -15,8 +15,8 @@ This terminal emulator seems over-hyped, but I'm trying it anyways.
     macos-window-shadow = false
     macos-icon = "custom-style"
     macos-icon-frame = "beige"
-    macos-icon-ghost-color = "#f891D6"
-    macos-icon-screen-color = "#0B0B0B"
+    macos-icon-screen-color = "#f891D6"
+    macos-icon-ghost-color = "#0B0B0B"
     auto-update = "off"
     '';
   }
