--- a/macos.local/.flake/home/programs/ghostty.nix.org
+++ b/macos.local/.flake/home/programs/ghostty.nix.org
@@ -6,18 +6,21 @@ This terminal emulator seems over-hyped, but I'm trying it anyways.
 
   {
     home.file."./.config/ghostty/config".text = ''
+    auto-update = "off"
+    background-blur-radius = 20
+    background-opacity = 0.8
     font-family = "SauceCodePro Nerd Font"
     font-thicken = true
-    theme = "Unikitty"
-    window-decoration = true
-    macos-option-as-alt = true
-    quit-after-last-window-closed = true
-    macos-window-shadow = false
     macos-icon = "custom-style"
     macos-icon-frame = "beige"
-    macos-icon-screen-color = "#ff8cd9"
     macos-icon-ghost-color = "#0B0B0B"
-    auto-update = "off"
+    macos-icon-screen-color = "#ff8cd9"
+    macos-option-as-alt = true
+    macos-window-shadow = false
+    mouse-hide-while-typing = true
+    quit-after-last-window-closed = true
+    theme = "Unikitty"
+    window-decoration = true
     '';
   }
 #+end_src
