--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -105,7 +105,7 @@ Run the early setup right away.
       :config
       (setq doom-themes-enable-bold t
             doom-themes-enable-italic t)
-      (load-theme 'doom-one t)
+      (load-theme 'doom-pink t)
       (doom-themes-org-config))
     (use-package doom-modeline
       :init
