--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -271,7 +271,7 @@ Run the early setup right away.
       (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
       :config
       (setq TeX-view-program-selection '((output-pdf "PDF Tools"))
-            TeX-view-program-list '(("PDF Tools" Tex-pdf-tools-sync-view))
+            TeX-view-program-list '(("PDF Tools" TeX-pdf-tools-sync-view))
             TeX-source-correlate-start-server t)))
 #+end_src
 
